--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -5,13 +5,13 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="edu.bootcamp.cnm.ejerson.helloworld.MainActivity">
+  app:layout_behavior="@string/appbar_scrolling_view_behavior"
+  tools:context="edu.bootcamp.cnm.ejerson.helloworld.NavigationActivity"
+  tools:showIn="@layout/app_bar_navigation">
 
-  <fragment
-    android:id="@+id/main_fragment"
-    android:name="edu.bootcamp.cnm.ejerson.helloworld.fragments.MainFragment"
+  <FrameLayout
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
-
 
 </android.support.constraint.ConstraintLayout>
